full, wazuh, and velociraptor healthchecks (#38)
* full, wazuh, and velociraptor healthchecks

full healthcheck determines the status of every agents wazuh, and velo services. if agent wazuh is healthy, check the wazuh-indexer to determine if logs have been recently collected (1, 5, 15) minute intervals

* precommit fixes
